--- a/css/style.css
+++ b/css/style.css
@@ -509,7 +509,10 @@ body {
     font-size: 2rem; }
 
 #myCanvasContainer {
-  margin: 5rem; }
+  margin: 3rem;
+  padding: 1rem;
+  border-radius: 100%;
+  background: radial-gradient(at center center, rgba(60, 128, 28, 0.08), rgba(60, 128, 28, 0.3)); }
 
 .portfolio {
   position: static; }
