--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -13,6 +13,30 @@
   }
   align-content: center;
 }
+
+.services__card {
+  display: flex;
+  min-height: 24rem;
+  &--image {
+    width: 30rem;
+
+    margin-right: 2rem;
+  }
+  &--text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 50rem;
+  }
+  &--description {
+    margin-bottom: 3rem;
+  }
+  &--price {
+    align-self: flex-end;
+    font-size: 3rem;
+    color: $color-secondary;
+  }
+}
 .avatar {
   height: 40rem;
   margin-left: 5rem;
@@ -47,12 +71,13 @@
 
 //list of available sites
 .tabs {
-  width: 80rem;
+  width: 110rem;
   padding: 0px;
   margin: 3rem 10rem;
   position: relative;
   border: 1px solid #dee8f2;
   font-size: 1.5rem;
+  font-family: $font-paragraph;
 }
 .tabs section {
   display: none;
@@ -62,9 +87,9 @@
   top: 0;
   left: 180px;
 }
-.tabs p {
-  margin: 0;
-}
+// .tabs p {
+//   margin: 0;
+// }
 .tabs input {
   display: none;
 }
@@ -104,4 +129,8 @@
     transform: scale(1);
     opacity: 1;
   }
+}
+
+.services__wrapper {
+  display: flex;
 }
