--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -18,7 +18,10 @@
   display: flex;
   min-height: 24rem;
   &--image {
-    width: 30rem;
+    width: 40rem;
+    height: 24rem;
+    margin-right: 2rem;
+    object-fit: contain;
 
     margin-right: 2rem;
   }
@@ -26,7 +29,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 50rem;
+    width: 40rem;
   }
   &--description {
     margin-bottom: 3rem;
@@ -75,7 +78,7 @@
   padding: 0px;
   margin: 3rem 10rem;
   position: relative;
-  border: 1px solid #dee8f2;
+  // border: 1px solid #dee8f2;
   font-size: 1.5rem;
   font-family: $font-paragraph;
 }
