--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -78,21 +78,20 @@
   padding: 0px;
   margin: 3rem 10rem;
   position: relative;
-  // border: 1px solid #dee8f2;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3),
+    -23px 0 20px -23px rgba(0, 0, 0, 0.8), 23px 0 20px -23px rgba(0, 0, 0, 0.8),
+    0 0 40px rgba(0, 0, 0, 0.1) inset;
   font-size: 1.5rem;
   font-family: $font-paragraph;
 }
 .tabs section {
   display: none;
   padding: 15px;
-  background: white;
   position: absolute;
   top: 0;
   left: 180px;
 }
-// .tabs p {
-//   margin: 0;
-// }
+
 .tabs input {
   display: none;
 }
