--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -8,7 +8,7 @@
 }
 .project-box {
   position: relative;
-  margin-top: 10px;
+  margin-bottom: 2rem;
   flex-basis: 45rem;
   height: 34.5rem;
   border-radius: 2px 2px 0px 0px;
