--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,7 +1,7 @@
 .about {
-  &__header {
-    height: 40vh;
-  }
+  // &__header {
+  //   height: 40vh;
+  // }
   &__img {
     width: auto;
     height: 50vh;
@@ -11,10 +11,20 @@
   }
 }
 .about__container {
+  margin-top: 3rem;
   display: flex;
+  flex-wrap: wrap;
   min-height: 65vh;
   align-items: center;
+  justify-content: center;
+  @include respond(tab-port) {
+    line-height: 1.3;
+  }
   &-text {
+    width: 65vw;
+    @media only screen and (max-width: 75em) {
+      width: auto;
+    }
     font-size: 2rem;
   }
 }
@@ -22,10 +32,15 @@
 #myCanvasContainer {
   margin: 3rem;
   padding: 1rem;
+
   border-radius: 100%;
   background: radial-gradient(
     at center center,
     rgba(60, 128, 28, 0.08),
     rgba(60, 128, 28, 0.3)
   );
+
+  @include respond(tab-port) {
+    scale: 0.7;
+  }
 }
