--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -11,15 +11,21 @@
   width: 70vw;
   display: grid;
   z-index: 100;
-  grid-template-columns: minmax(min-content, max-content) 1fr 1fr;
+  grid-template-columns: minmax(min-content, max-content) 1fr;
+
   align-content: center;
   align-items: center;
   &__contacts {
-    justify-self: end;
+    margin-left: 5rem;
     font-size: 1.5rem;
   }
-  @media only screen and (max-width: 87.5em) {
-    grid-column: 1/-1;
+  @include respond(tab-land) {
+    width: 80%;
+  }
+  @include respond(tab-port) {
+    width: 100%;
+    height: 10rem;
+    grid-template-columns: 1fr;
   }
 }
 
@@ -33,6 +39,9 @@
 
   @media only screen and (max-width: 100em) {
     margin-left: 5rem;
+  }
+  @include respond(tab-port) {
+    margin-bottom: 1rem;
   }
 
   grid-gap: 1rem;
@@ -61,17 +70,19 @@
   }
   &__link:hover,
   &__link:active {
-    // background-color: rgba(#fff, 0.05);
     transform: translateY(-3px);
     background-color: $color-primary;
   }
 }
 
 .ru-eng {
-  justify-self: end;
-  margin-right: 3rem;
   display: flex;
   @media only screen and (max-width: 87.5em) {
     margin-right: 2rem;
   }
+}
+
+.row-2 {
+  display: flex;
+  justify-content: space-between;
 }
