mobile version fixed

--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -39,8 +39,16 @@
     rgba(60, 128, 28, 0.08),
     rgba(60, 128, 28, 0.3)
   );
+}
 
-  @include respond(tab-port) {
-    scale: 0.7;
-  }
+#myCanvasContainerMob {
+  margin: 3rem;
+  padding: 1rem;
+
+  border-radius: 100%;
+  background: radial-gradient(
+    at center center,
+    rgba(60, 128, 28, 0.08),
+    rgba(60, 128, 28, 0.3)
+  );
 }
