--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -23,15 +23,15 @@
   }
 
   &__arrows {
-    width: 12rem;
+    width: 100px;
     height: 7rem;
     grid-row: 1/2;
     grid-column: 1/2;
     z-index: 101;
     justify-self: center;
     position: absolute;
-    left: 50%;
-    margin-left: -3rem;
+    // left: 50%;
+    // margin-left: -3rem;
     top: 47vh;
     opacity: 0.7;
 
